# opus-jni

./: build.gradle
.github/workflows/: ci.yml  ci_2.yml
opus-jni-java/: build.gradle
opus-jni-java/src/main/java/net/labymod/opus/: OpusCodec.java  OpusDecoder.java  OpusEncoder.java  OpusError.java
opus-jni-native/: CMakeLists.txt  build.gradle
opus-jni-native/src/: opus_jni.c
